Fix collapsing browser settings, add media query for inbetween section

--- a/styles.css
+++ b/styles.css
@@ -230,8 +230,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   border-width: 1px;
-  min-height: 30vh;
-  max-height: 30vh;
+  min-height: 10vh;
 }
 
 .card-top {
@@ -260,24 +259,40 @@ body {
   height: auto;
 }
 
-/* input {
+input {
   max-width: 50%;
   height: auto;
   padding-top: 3px;
-} */
+}
 
 /*=== media queries ===*/
+@media only screen and (max-width: 1100px) {
 
-/* @media only screen and (max-width: 1100px) {
   .card-grid {
-    flex-grow: 3;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 15px;
-    padding: 30px;
-  } */
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 15px;
+  padding: 20px;
+}
 
-@media only screen and (max-width: 400px) {
+.card-top {
+  background: #1F1F3D;
+  height: 50px;
+}
+
+.card-bottom {
+  background: #5356A4;
+  height: 55px;
+}
+
+.box {
+  border: solid;
+  border-color: #1F1F3D;
+  border-width: 1px;
+}
+}
+
+@media only screen and (max-width: 600px) {
   body {
     flex-direction: column;
   }
@@ -326,6 +341,7 @@ body {
   }
 
   .box {
+    display: flex;
     flex-grow: 1;
     width: 100%;
     margin: 5px 0;
@@ -338,33 +354,4 @@ body {
     min-width: 5%;
     height: auto;
   }
-}
-
-
-
-  /* .card-top {
-    background: #1F1F3D;
-    height: 50px;
-  }
-
-  .card-bottom {
-    background: #5356A4;
-    height: 55px;
-  }
-
-  .box {
-    border: solid;
-    border-color: #1F1F3D;
-    border-width: 1px;
-  } */
-
-  /* .card-grid {
-    display: flex;
-    flex-grow: 3;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 15px;
-    padding: 30px;
-    font-size: 14px;
-  } */
 }
